# scivec

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
src/: image.cpp  image.hpp  main.cpp  palette.cpp  palette.hpp  scipic.cpp  scipic.hpp  scipicencoder.cpp  scipicencoder.hpp  scipicparser.cpp  scipicparser.hpp  scipicvectorizer.cpp  scipicvectorizer.hpp
